--- a/demo-angular/src/app/shared/code-example/code-example.component.scss
+++ b/demo-angular/src/app/shared/code-example/code-example.component.scss
@@ -39,6 +39,7 @@
   border: 1px solid #dee2e6;
   border-radius: 0 0 0.375rem 0.375rem;
   overflow: hidden;
+  direction: ltr;
 
   .code-tabs {
     display: flex;
