--- a/theme/customizations/_cards.scss
+++ b/theme/customizations/_cards.scss
@@ -75,9 +75,9 @@
 
   .card-title-checked {
     margin-inline-start: auto;
-    margin-inline-end: 4%;
-    margin-top: 4%;
-    margin-bottom: 4%;
+    margin-inline-end: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
 
   .card-text {
